Add structure to card

--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
     <header>
       <h1>Quiz App</h1>
     </header>
+    <section class="card closed">
+      <p>Question1</p>
+      <button>Show Answer</button>
+      <ul>
+        <li><button>#html</button></li>
+        <li><button>#flexbox</button></li>
+        <li><button>#css></button></li>
+      </ul>
+    </section>
   </body>
 </html>
