Add cards and footer with navbar

--- a/index.html
+++ b/index.html
@@ -11,14 +11,51 @@
     <header>
       <h1>Quiz App</h1>
     </header>
+
     <section class="card closed">
-      <p>Question1</p>
-      <button>Show Answer</button>
+      <p class="question">Question 1</p>
+      <button class="AnswerButton">Show Answer</button>
       <ul>
         <li><button>#html</button></li>
         <li><button>#flexbox</button></li>
-        <li><button>#css></button></li>
+        <li><button>#css</button></li>
       </ul>
+      <img src="./Bookmark_icon.svg.png" alt="bookmark" class="bookmark" />
     </section>
+
+    <section class="card open">
+      <p class="question">Question 2</p>
+      <button class="AnswerButton">Hide Answer</button>
+      <ul>
+        <li><button>#html</button></li>
+        <li><button>#flexbox</button></li>
+        <li><button>#css</button></li>
+      </ul>
+      <p class="answer">flex direction</p>
+      <img
+        src="./icon-bookmark-0.jpeg"
+        alt="bookmark unfilled"
+        class="bookmarkTwo"
+      />
+    </section>
+
+    <section class="card closed">
+      <p class="question">Question 1</p>
+      <button class="AnswerButton">Show Answer</button>
+      <ul>
+        <li><button>#html</button></li>
+        <li><button>#flexbox</button></li>
+        <li><button>#css</button></li>
+      </ul>
+      <img src="./Bookmark_icon.svg.png" alt="bookmark" class="bookmark" />
+    </section>
+
+    <footer>
+      <nav>
+        <a href="#">Startseite</a>
+        <a href="#">Bookmarks</a>
+        <a href="#">Profil</a>
+      </nav>
+    </footer>
   </body>
 </html>
