Link to bookmarks.html in nav bar

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
     <footer>
       <nav>
-        <a href="#">Startseite</a>
-        <a href="#">Bookmarks</a>
+        <a href="index.html">Startseite</a>
+        <a href="bookmarks.html">Bookmarks</a>
         <a href="#">Profil</a>
       </nav>
     </footer>
