Change nav bar on index.html

--- a/index.html
+++ b/index.html
@@ -52,9 +52,18 @@
 
     <footer>
       <nav>
-        <a href="index.html">Startseite</a>
-        <a href="bookmarks.html">Bookmarks</a>
-        <a href="#">Profil</a>
+        <a href="index.html"
+          ><img src="./faq.png" alt="question icon" class="questionSite"
+        /></a>
+        <a href="bookmarks.html"
+          ><img
+            src="./Bookmark_icon.svg.png"
+            alt="bookmark icon"
+            class="bookmarkSite"
+        /></a>
+        <a href="#"
+          ><img src="./benutzer.png" alt="question icon" class="profileSite"
+        /></a>
       </nav>
     </footer>
   </body>
