--- a/bookmarks.html
+++ b/bookmarks.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
+
   <body>
     <header>
       <h1>Quiz App</h1>
@@ -23,24 +24,19 @@
       <img src="./Bookmark_icon.svg.png" alt="bookmark" class="bookmark" />
     </section>
 
-    <section class="card open">
-      <p class="question">Question 1</p>
-      <button class="AnswerButton">Hide Answer</button>
+    <section class="card closed">
+      <p class="question">Question 2</p>
+      <button class="AnswerButton">Show Answer</button>
       <ul>
         <li><button>#html</button></li>
         <li><button>#flexbox</button></li>
         <li><button>#css</button></li>
       </ul>
-      <p class="answer">flex direction</p>
-      <img
-        src="./icon-bookmark-0.jpeg"
-        alt="bookmark unfilled"
-        class="bookmarkTwo"
-      />
+      <img src="./Bookmark_icon.svg.png" alt="bookmark" class="bookmark" />
     </section>
 
     <section class="card closed">
-      <p class="question">Question 2</p>
+      <p class="question">Question 3</p>
       <button class="AnswerButton">Show Answer</button>
       <ul>
         <li><button>#html</button></li>
