Change CSS structure and import component files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="card">
       <p class="card__question">Question 1</p>
       <button class="card__answerButton">Hide Answer</button>
-      <ul>
+      <ul class="card__tags">
         <li class="card__tagitem"><button>#html</button></li>
         <li class="card__tagitem"><button>#flexbox</button></li>
         <li class="card__tagitem"><button>#css</button></li>
@@ -46,7 +46,7 @@
     <section class="card">
       <p class="card__question">Question 2</p>
       <button class="card__answerButton">Show Answer</button>
-      <ul>
+      <ul class="card__tags">
         <li class="card__tagitem"><button>#html</button></li>
         <li class="card__tagitem"><button>#flexbox</button></li>
         <li class="card__tagitem"><button>#css</button></li>
