--- a/bookmarks.html
+++ b/bookmarks.html
@@ -31,7 +31,7 @@
     <section class="card">
       <p class="card__question">Question 2</p>
       <button class="card__answerButton">Show Answer</button>
-      <ul>
+      <ul class="card__tags">
         <li class="card__tagitem"><button>#html</button></li>
         <li class="card__tagitem"><button>#flexbox</button></li>
         <li class="card__tagitem"><button>#css</button></li>
@@ -46,7 +46,7 @@
     <section class="card">
       <p class="card__question">Question 3</p>
       <button class="card__answerButton">Show Answer</button>
-      <ul>
+      <ul class="card__tags">
         <li class="card__tagitem"><button>#html</button></li>
         <li class="card__tagitem"><button>#flexbox</button></li>
         <li class="card__tagitem"><button>#css</button></li>
