Change navbar highlighting in CSS structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./components/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -64,7 +64,7 @@
           ><img
             src="./faq.png"
             alt="question icon"
-            class="footer__navigationQuestionSite"
+            class="footer__navigationQuestionSite--highlighted"
         /></a>
         <a href="bookmarks.html"
           ><img
