--- a/bookmarks.html
+++ b/bookmarks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./components/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
 
@@ -70,7 +70,7 @@
           ><img
             src="./Bookmark_icon.svg.png"
             alt="bookmark icon"
-            class="footer__navigationBookmarkSite"
+            class="footer__navigationBookmarkSite--highlighted"
         /></a>
         <a href="#"
           ><img
