Fix icon reference and tag-item name

--- a/index.html
+++ b/index.html
@@ -12,49 +12,49 @@
       <h1 class="header">Quiz App</h1>
     </header>
 
-    <section class="card">
-      <p class="card__question">Question 1</p>
-      <button class="card__answerButton">Show Answer</button>
-      <ul class="card__tags">
-        <li class="card__tagitem"><button>#html</button></li>
-        <li class="card__tagitem"><button>#flexbox</button></li>
-        <li class="card__tagitem"><button>#css</button></li>
+    <section class="quizcard">
+      <p class="quizcard__question">Question 1</p>
+      <button class="quizcard__answerButton">Show Answer</button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
       <img
-        src="./Bookmark_icon.svg.png"
+        src="./icons/Bookmark_icon.svg.png"
         alt="bookmark"
-        class="card__bookmarkFilled"
+        class="quizcard__bookmarkFilled"
       />
     </section>
 
-    <section class="card">
-      <p class="card__question">Question 1</p>
-      <button class="card__answerButton">Hide Answer</button>
-      <ul class="card__tags">
-        <li class="card__tagitem"><button>#html</button></li>
-        <li class="card__tagitem"><button>#flexbox</button></li>
-        <li class="card__tagitem"><button>#css</button></li>
+    <section class="quizcard">
+      <p class="quizcard__question">Question 1</p>
+      <button class="quizcard__answerButton">Hide Answer</button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <p class="card__answer-open">flex direction</p>
+      <p class="quizcard__answer-open">flex direction</p>
       <img
-        src="./icon-bookmark-0.jpeg"
+        src="./icons/icon-bookmark-0.jpeg"
         alt="bookmark unfilled"
-        class="card__bookmarkUnfilled"
+        class="quizcard__bookmarkUnfilled"
       />
     </section>
 
-    <section class="card">
-      <p class="card__question">Question 2</p>
-      <button class="card__answerButton">Show Answer</button>
-      <ul class="card__tags">
-        <li class="card__tagitem"><button>#html</button></li>
-        <li class="card__tagitem"><button>#flexbox</button></li>
-        <li class="card__tagitem"><button>#css</button></li>
+    <section class="quizcard">
+      <p class="quizcard__question">Question 2</p>
+      <button class="quizcard__answerButton">Show Answer</button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
       <img
-        src="./Bookmark_icon.svg.png"
+        src="./icons/Bookmark_icon.svg.png"
         alt="bookmark"
-        class="card__bookmarkFilled"
+        class="quizcard__bookmarkFilled"
       />
     </section>
 
@@ -62,19 +62,19 @@
       <nav class="footer__navigation">
         <a href="index.html"
           ><img
-            src="./faq.png"
+            src="./icons/faq.png"
             alt="question icon"
             class="footer__navigationQuestionSite--highlighted"
         /></a>
         <a href="bookmarks.html"
           ><img
-            src="./Bookmark_icon.svg.png"
+            src="./icons/Bookmark_icon.svg.png"
             alt="bookmark icon"
             class="footer__navigationBookmarkSite"
         /></a>
         <a href="#"
           ><img
-            src="./benutzer.png"
+            src="./icons/benutzer.png"
             alt="question icon"
             class="footer__navigationProfileSite"
         /></a>
