Change navigation classes

--- a/index.html
+++ b/index.html
@@ -58,25 +58,25 @@
       />
     </section>
 
-    <footer class="footer">
-      <nav class="footer__navigation">
+    <footer>
+      <nav class="navigation">
         <a href="index.html"
           ><img
             src="./icons/faq.png"
             alt="question icon"
-            class="footer__navigationQuestionSite--highlighted"
+            class="navigation__QuestionSite--highlighted"
         /></a>
         <a href="bookmarks.html"
           ><img
             src="./icons/Bookmark_icon.svg.png"
             alt="bookmark icon"
-            class="footer__navigationBookmarkSite"
+            class="navigation__BookmarkSite"
         /></a>
         <a href="#"
           ><img
             src="./icons/benutzer.png"
             alt="question icon"
-            class="footer__navigationProfileSite"
+            class="navigation__ProfileSite"
         /></a>
       </nav>
     </footer>
