--- a/bookmarks.html
+++ b/bookmarks.html
@@ -4,61 +4,79 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
 
   <body>
     <header>
-      <h1>Quiz App</h1>
+      <h1 class="header">Quiz App</h1>
     </header>
 
-    <section class="card closed">
-      <p class="question">Question 1</p>
-      <button class="AnswerButton">Show Answer</button>
-      <ul>
-        <li><button>#html</button></li>
-        <li><button>#flexbox</button></li>
-        <li><button>#css</button></li>
+    <section class="quizcard">
+      <p class="quizcard__question">Question 1</p>
+      <button class="quizcard__answerButton">Show Answer</button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img src="./Bookmark_icon.svg.png" alt="bookmark" class="bookmark" />
+      <img
+        src="./icons/Bookmark_icon.svg.png"
+        alt="bookmark"
+        class="quizcard__bookmarkFilled"
+      />
     </section>
 
-    <section class="card closed">
-      <p class="question">Question 2</p>
-      <button class="AnswerButton">Show Answer</button>
-      <ul>
-        <li><button>#html</button></li>
-        <li><button>#flexbox</button></li>
-        <li><button>#css</button></li>
+    <section class="quizcard">
+      <p class="quizcard__question">Question 2</p>
+      <button class="quizcard__answerButton">Show Answer</button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img src="./Bookmark_icon.svg.png" alt="bookmark" class="bookmark" />
+      <img
+        src="./icons/Bookmark_icon.svg.png"
+        alt="bookmark"
+        class="quizcard__bookmarkFilled"
+      />
     </section>
 
-    <section class="card closed">
-      <p class="question">Question 3</p>
-      <button class="AnswerButton">Show Answer</button>
-      <ul>
-        <li><button>#html</button></li>
-        <li><button>#flexbox</button></li>
-        <li><button>#css</button></li>
+    <section class="quizcard">
+      <p class="quizcard__question">Question 3</p>
+      <button class="quizcard__answerButton">Show Answer</button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img src="./Bookmark_icon.svg.png" alt="bookmark" class="bookmark" />
+      <img
+        src="./icons/Bookmark_icon.svg.png"
+        alt="bookmark"
+        class="quizcard__bookmarkFilled"
+      />
     </section>
 
     <footer>
-      <nav>
+      <nav class="navigation">
         <a href="index.html"
-          ><img src="./faq.png" alt="question icon" class="questionSite"
+          ><img
+            src="./icons/faq.png"
+            alt="question icon"
+            class="navigation__QuestionSite"
         /></a>
         <a href="bookmarks.html"
           ><img
-            src="./Bookmark_icon.svg.png"
+            src="./icons/Bookmark_icon.svg.png"
             alt="bookmark icon"
-            class="bookmarkSite"
+            class="navigation__BookmarkSite--highlighted"
         /></a>
         <a href="#"
-          ><img src="./benutzer.png" alt="question icon" class="profileSite"
+          ><img
+            src="./icons/benutzer.png"
+            alt="question icon"
+            class="navigation__ProfileSite"
         /></a>
       </nav>
     </footer>
