--- a/index.html
+++ b/index.html
@@ -9,60 +9,74 @@
   </head>
   <body>
     <header>
-      <h1>Quiz App</h1>
+      <h1 class="header">Quiz App</h1>
     </header>
 
-    <section class="card closed">
-      <p class="question">Question 1</p>
-      <button class="AnswerButton">Show Answer</button>
-      <ul>
-        <li><button>#html</button></li>
-        <li><button>#flexbox</button></li>
-        <li><button>#css</button></li>
+    <section class="quizcard">
+      <p class="quizcard__question">Question 1</p>
+      <button class="quizcard__answerButton">Show Answer</button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img src="./Bookmark_icon.svg.png" alt="bookmark" class="bookmark" />
-    </section>
-
-    <section class="card open">
-      <p class="question">Question 1</p>
-      <button class="AnswerButton">Hide Answer</button>
-      <ul>
-        <li><button>#html</button></li>
-        <li><button>#flexbox</button></li>
-        <li><button>#css</button></li>
-      </ul>
-      <p class="answer">flex direction</p>
       <img
-        src="./icon-bookmark-0.jpeg"
-        alt="bookmark unfilled"
-        class="bookmarkTwo"
+        src="./icons/Bookmark_icon.svg.png"
+        alt="bookmark"
+        class="quizcard__bookmarkFilled"
       />
     </section>
 
-    <section class="card closed">
-      <p class="question">Question 2</p>
-      <button class="AnswerButton">Show Answer</button>
-      <ul>
-        <li><button>#html</button></li>
-        <li><button>#flexbox</button></li>
-        <li><button>#css</button></li>
+    <section class="quizcard">
+      <p class="quizcard__question">Question 1</p>
+      <button class="quizcard__answerButton">Hide Answer</button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img src="./Bookmark_icon.svg.png" alt="bookmark" class="bookmark" />
+      <p class="quizcard__answer-open">flex direction</p>
+      <img
+        src="./icons/icon-bookmark-0.jpeg"
+        alt="bookmark unfilled"
+        class="quizcard__bookmarkUnfilled"
+      />
+    </section>
+
+    <section class="quizcard">
+      <p class="quizcard__question">Question 2</p>
+      <button class="quizcard__answerButton">Show Answer</button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
+      </ul>
+      <img
+        src="./icons/Bookmark_icon.svg.png"
+        alt="bookmark"
+        class="quizcard__bookmarkFilled"
+      />
     </section>
 
     <footer>
-      <nav>
+      <nav class="navigation">
         <a href="index.html"
-          ><img src="./faq.png" alt="question icon" class="questionSite"
+          ><img
+            src="./icons/faq.png"
+            alt="question icon"
+            class="navigation__QuestionSite--highlighted"
         /></a>
         <a href="bookmarks.html"
           ><img
-            src="./Bookmark_icon.svg.png"
+            src="./icons/Bookmark_icon.svg.png"
             alt="bookmark icon"
-            class="bookmarkSite"
+            class="navigation__BookmarkSite"
         /></a>
         <a href="#"
-          ><img src="./benutzer.png" alt="question icon" class="profileSite"
+          ><img
+            src="./icons/benutzer.png"
+            alt="question icon"
+            class="navigation__ProfileSite"
         /></a>
       </nav>
     </footer>
