--- a/bookmarks.html
+++ b/bookmarks.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./js/index.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/68e44deb6f.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
 
@@ -15,66 +20,69 @@
 
     <section class="quizcard">
       <p class="quizcard__question">Question 1</p>
-      <button class="quizcard__answerButton">Show Answer</button>
+      <button class="quizcard__answerButton" data-js="quizcard-answer-button">
+        Show Answer
+      </button>
       <ul class="quizcard__tags">
         <li class="quizcard__tag-item"><button>#html</button></li>
         <li class="quizcard__tag-item"><button>#flexbox</button></li>
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img
-        src="./icons/Bookmark_icon.svg.png"
-        alt="bookmark"
-        class="quizcard__bookmarkFilled"
-      />
+      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+        CSS Grid
+      </p>
+      <i class="fa-solid fa-bookmark quizcard__bookmarkFilled"></i>
     </section>
 
     <section class="quizcard">
       <p class="quizcard__question">Question 2</p>
-      <button class="quizcard__answerButton">Show Answer</button>
+      <button class="quizcard__answerButton" data-js="quizcard-answer-button">
+        Show Answer
+      </button>
       <ul class="quizcard__tags">
         <li class="quizcard__tag-item"><button>#html</button></li>
         <li class="quizcard__tag-item"><button>#flexbox</button></li>
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img
-        src="./icons/Bookmark_icon.svg.png"
-        alt="bookmark"
-        class="quizcard__bookmarkFilled"
-      />
+      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+        flex direction
+      </p>
+      <i class="fa-solid fa-bookmark quizcard__bookmarkFilled"></i>
     </section>
 
     <section class="quizcard">
       <p class="quizcard__question">Question 3</p>
-      <button class="quizcard__answerButton">Show Answer</button>
+      <button class="quizcard__answerButton" data-js="quizcard-answer-button">
+        Show Answer
+      </button>
       <ul class="quizcard__tags">
         <li class="quizcard__tag-item"><button>#html</button></li>
         <li class="quizcard__tag-item"><button>#flexbox</button></li>
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img
-        src="./icons/Bookmark_icon.svg.png"
-        alt="bookmark"
-        class="quizcard__bookmarkFilled"
-      />
+      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+        javaScript
+      </p>
+      <i class="fa-solid fa-bookmark quizcard__bookmarkFilled"></i>
     </section>
 
     <footer>
       <nav class="navigation">
         <a href="index.html"
           ><img
-            src="./icons/faq.png"
+            src="./icons/circle-question-regular.svg"
             alt="question icon"
             class="navigation__QuestionSite"
         /></a>
         <a href="bookmarks.html"
           ><img
-            src="./icons/Bookmark_icon.svg.png"
+            src="./icons/bookmark-regular.svg"
             alt="bookmark icon"
             class="navigation__BookmarkSite--highlighted"
         /></a>
         <a href="#"
           ><img
-            src="./icons/benutzer.png"
+            src="./icons/user-regular.svg"
             alt="question icon"
             class="navigation__ProfileSite"
         /></a>
