--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <script src="./js/index.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/68e44deb6f.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
@@ -14,67 +19,75 @@
 
     <section class="quizcard">
       <p class="quizcard__question">Question 1</p>
-      <button class="quizcard__answerButton">Show Answer</button>
+      <button class="quizcard__answerButton" data-js="quizcard-answer-button">
+        Show Answer
+      </button>
       <ul class="quizcard__tags">
         <li class="quizcard__tag-item"><button>#html</button></li>
         <li class="quizcard__tag-item"><button>#flexbox</button></li>
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img
-        src="./icons/Bookmark_icon.svg.png"
-        alt="bookmark"
-        class="quizcard__bookmarkFilled"
-      />
-    </section>
-
-    <section class="quizcard">
-      <p class="quizcard__question">Question 1</p>
-      <button class="quizcard__answerButton">Hide Answer</button>
-      <ul class="quizcard__tags">
-        <li class="quizcard__tag-item"><button>#html</button></li>
-        <li class="quizcard__tag-item"><button>#flexbox</button></li>
-        <li class="quizcard__tag-item"><button>#css</button></li>
-      </ul>
-      <p class="quizcard__answer-open">flex direction</p>
-      <img
-        src="./icons/icon-bookmark-0.jpeg"
-        alt="bookmark unfilled"
-        class="quizcard__bookmarkUnfilled"
-      />
+      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+        CSS Grid
+      </p>
+      <button class="quizcard__bookmarkUnfilled">
+        <i class="fa-regular fa-bookmark quizcard__bookmarkUnfilled"></i>
+      </button>
     </section>
 
     <section class="quizcard">
       <p class="quizcard__question">Question 2</p>
-      <button class="quizcard__answerButton">Show Answer</button>
+      <button class="quizcard__answerButton" data-js="quizcard-answer-button">
+        Show Answer
+      </button>
       <ul class="quizcard__tags">
         <li class="quizcard__tag-item"><button>#html</button></li>
         <li class="quizcard__tag-item"><button>#flexbox</button></li>
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <img
-        src="./icons/Bookmark_icon.svg.png"
-        alt="bookmark"
-        class="quizcard__bookmarkFilled"
-      />
+      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+        flex direction
+      </p>
+      <button class="quizcard__bookmarkUnfilled">
+        <i class="fa-regular fa-bookmark quizcard__bookmarkUnfilled"></i>
+      </button>
+    </section>
+
+    <section class="quizcard">
+      <p class="quizcard__question">Question 3</p>
+      <button class="quizcard__answerButton" data-js="quizcard-answer-button">
+        Show Answer
+      </button>
+      <ul class="quizcard__tags">
+        <li class="quizcard__tag-item"><button>#html</button></li>
+        <li class="quizcard__tag-item"><button>#flexbox</button></li>
+        <li class="quizcard__tag-item"><button>#css</button></li>
+      </ul>
+      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+        javaScript
+      </p>
+      <button class="quizcard__bookmarkUnfilled">
+        <i class="fa-regular fa-bookmark quizcard__bookmarkUnfilled"></i>
+      </button>
     </section>
 
     <footer>
       <nav class="navigation">
         <a href="index.html"
           ><img
-            src="./icons/faq.png"
+            src="./icons/circle-question-regular.svg"
             alt="question icon"
             class="navigation__QuestionSite--highlighted"
         /></a>
         <a href="bookmarks.html"
           ><img
-            src="./icons/Bookmark_icon.svg.png"
+            src="./icons/bookmark-regular.svg"
             alt="bookmark icon"
             class="navigation__BookmarkSite"
         /></a>
         <a href="#"
           ><img
-            src="./icons/benutzer.png"
+            src="./icons/user-regular.svg"
             alt="question icon"
             class="navigation__ProfileSite"
         /></a>
