Add profile page basics

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             alt="bookmark icon"
             class="navigation__BookmarkSite"
         /></a>
-        <a href="#"
+        <a href="profile.html"
           ><img
             src="./icons/user-regular.svg"
             alt="question icon"
