Add quote on profile

--- a/profile.html
+++ b/profile.html
@@ -33,6 +33,12 @@
       </ul>
     </section>
 
+    <p class="quote inspiration">Inspirational quote:</p>
+    <p class="quote">
+      “Tell me and I forget, teach me and I may remember, involve me and I
+      learn.” - Benjamin Franklin
+    </p>
+
     <footer>
       <nav class="navigation">
         <a href="index.html"
@@ -47,7 +53,7 @@
             alt="bookmark icon"
             class="navigation__BookmarkSite"
         /></a>
-        <a href="#"
+        <a href="profile.html"
           ><img
             src="./icons/user-regular.svg"
             alt="question icon"
