--- a/bookmarks.html
+++ b/bookmarks.html
@@ -80,7 +80,7 @@
             alt="bookmark icon"
             class="navigation__BookmarkSite--highlighted"
         /></a>
-        <a href="#"
+        <a href="profile.html"
           ><img
             src="./icons/user-regular.svg"
             alt="question icon"
