Add dark mode button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
     <title>Document</title>
   </head>
-  <body>
+  <body data-js="bodyDarkMode">
     <header>
       <h1 class="header">Quiz App</h1>
     </header>
@@ -70,6 +70,10 @@
         <i class="fa-regular fa-bookmark quizcard__bookmarkUnfilled"></i>
       </button>
     </section>
+
+    <button type="button" class="buttonDarkMode" data-js="buttonDarkMode">
+      Dark Mode
+    </button>
 
     <footer>
       <nav class="navigation">
