--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
     <title>Document</title>
   </head>
 
-  <body>
+  <body data-js="bodyDarkMode">
     <header>
       <h1 class="header">Quiz App</h1>
     </header>
@@ -33,11 +33,15 @@
       </ul>
     </section>
 
-    <p class="quote inspiration">Inspirational quote:</p>
+    <p class="quote inspiration">Cheesy inspirational quote:</p>
     <p class="quote">
       “Tell me and I forget, teach me and I may remember, involve me and I
       learn.” - Benjamin Franklin
     </p>
+
+    <button type="button" class="buttonDarkMode" data-js="buttonDarkMode">
+      Dark Mode
+    </button>
 
     <footer>
       <nav class="navigation">
