--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,7 +13,7 @@
     <title>Document</title>
   </head>
 
-  <body>
+  <body data-js="bodyDarkmode">
     <header>
       <h1 class="header">Quiz App</h1>
     </header>
@@ -65,6 +65,10 @@
       </p>
       <i class="fa-solid fa-bookmark quizcard__bookmarkFilled"></i>
     </section>
+
+    <button type="button" class="buttonDarkMode" data-js="buttonDarkMode">
+      Dark Mode
+    </button>
 
     <footer>
       <nav class="navigation">
