--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,7 +13,7 @@
     <title>Document</title>
   </head>
 
-  <body data-js="bodyDarkmode">
+  <body data-js="bodyDarkMode">
     <header>
       <h1 class="header">Quiz App</h1>
     </header>
