Feature/profile page (#6)
* Add profile page basics

* Add quote on profile

* Add dark mode button

* Change data-js class bodyDarkMode

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,7 +13,7 @@
     <title>Document</title>
   </head>
 
-  <body>
+  <body data-js="bodyDarkMode">
     <header>
       <h1 class="header">Quiz App</h1>
     </header>
@@ -66,6 +66,10 @@
       <i class="fa-solid fa-bookmark quizcard__bookmarkFilled"></i>
     </section>
 
+    <button type="button" class="buttonDarkMode" data-js="buttonDarkMode">
+      Dark Mode
+    </button>
+
     <footer>
       <nav class="navigation">
         <a href="index.html"
@@ -80,7 +84,7 @@
             alt="bookmark icon"
             class="navigation__BookmarkSite--highlighted"
         /></a>
-        <a href="#"
+        <a href="profile.html"
           ><img
             src="./icons/user-regular.svg"
             alt="question icon"
