--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
     <title>Document</title>
   </head>
-  <body>
+  <body data-js="bodyDarkMode">
     <header>
       <h1 class="header">Quiz App</h1>
     </header>
@@ -71,6 +71,10 @@
       </button>
     </section>
 
+    <button type="button" class="buttonDarkMode" data-js="buttonDarkMode">
+      Dark Mode
+    </button>
+
     <footer>
       <nav class="navigation">
         <a href="index.html"
@@ -85,7 +89,7 @@
             alt="bookmark icon"
             class="navigation__BookmarkSite"
         /></a>
-        <a href="#"
+        <a href="profile.html"
           ><img
             src="./icons/user-regular.svg"
             alt="question icon"
