First attempt to toggle bookmark

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -31,7 +31,7 @@
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
         CSS Grid
       </p>
-      <i class="fa-solid fa-bookmark quizcard__bookmarkFilled"></i>
+      <i class="fa-solid fa-bookmark quizcard__bookmark"></i>
     </section>
 
     <section class="quizcard">
