Add new form.html and input fields

--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             alt="bookmark icon"
             class="navigation__BookmarkSite"
         /></a>
+        <a href="form.html"
+          ><img
+            src="./icons/circle-question-regular.svg"
+            alt="new card form"
+            class="navigation__newCardSite"
+          />
+        </a>
         <a href="profile.html"
           ><img
             src="./icons/user-regular.svg"
