Add new navigation icon and style input

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -84,6 +84,13 @@
             alt="bookmark icon"
             class="navigation__BookmarkSite--highlighted"
         /></a>
+        <a href="form.html"
+          ><img
+            src="./icons/plus-solid.svg"
+            alt="new card form"
+            class="navigation__newCardSite"
+          />
+        </a>
         <a href="profile.html"
           ><img
             src="./icons/user-regular.svg"
