--- a/form.html
+++ b/form.html
@@ -47,7 +47,7 @@
         /></a>
         <a href="form.html"
           ><img
-            src="./icons/circle-question-regular.svg"
+            src="./icons/plus-solid.svg"
             alt="new card form"
             class="navigation__newCardSite--highlighted"
           />
