--- a/profile.html
+++ b/profile.html
@@ -57,6 +57,12 @@
             alt="bookmark icon"
             class="navigation__BookmarkSite"
         /></a>
+        <a href="form.html"
+          ><img
+            src="./icons/plus-solid.svg"
+            alt="new card form"
+            class="navigation__newCardSite"
+          />
         <a href="profile.html"
           ><img
             src="./icons/user-regular.svg"
