--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         /></a>
         <a href="form.html"
           ><img
-            src="./icons/circle-question-regular.svg"
+            src="./icons/plus-solid.svg"
             alt="new card form"
             class="navigation__newCardSite"
           />
