Change bookmarks to images

--- a/index.html
+++ b/index.html
@@ -30,15 +30,19 @@
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
         CSS Grid
       </p>
-      <button class="quizcard__bookmark" data-js="bookmark-button">
-        <i
-          class="fa-regular fa-bookmark quizcard__bookmark"
+      <button class="bookmark" data-js="bookmark-button">
+        <img
+          src="./icons/bookmark-regular.svg"
+          alt="unfilled bookmark"
+          class="bookmark"
           data-js="bookmark-icon"
-        ></i>
-        <i
-          class="fa-solid fa-bookmark quizcard__bookmark hidden"
+        />
+        <img
+          src="./icons/bookmark-solid.svg"
+          alt="filled bookmark"
+          class="bookmark hidden"
           data-js="bookmark-icon-filled"
-        ></i>
+        />
       </button>
     </section>
 
@@ -55,8 +59,8 @@
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
         flex direction
       </p>
-      <button class="quizcard__bookmark">
-        <i class="fa-regular fa-bookmark quizcard__bookmark"></i>
+      <button class="fa-bookmark">
+        <i class="fa-regular fa-bookmark"></i>
       </button>
     </section>
 
@@ -73,8 +77,8 @@
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
         javaScript
       </p>
-      <button class="quizcard__bookmarkUnfilled">
-        <i class="fa-regular fa-bookmark quizcard__bookmarkUnfilled"></i>
+      <button class="fa-bookmark">
+        <i class="fa-regular fa-bookmark"></i>
       </button>
     </section>
 
