--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <img
           src="./icons/bookmark-regular.svg"
           alt="unfilled bookmark"
-          class="bookmark"
+          class=""
           data-js="bookmark-icon"
         />
         <img
           src="./icons/bookmark-solid.svg"
           alt="filled bookmark"
-          class="bookmark hidden"
+          class="hidden"
           data-js="bookmark-icon-filled"
         />
       </button>
@@ -59,8 +59,19 @@
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
         flex direction
       </p>
-      <button class="fa-bookmark">
-        <i class="fa-regular fa-bookmark"></i>
+      <button class="bookmark" data-js="bookmark-button">
+        <img
+          src="./icons/bookmark-regular.svg"
+          alt="unfilled bookmark"
+          class=""
+          data-js="bookmark-icon"
+        />
+        <img
+          src="./icons/bookmark-solid.svg"
+          alt="filled bookmark"
+          class="hidden"
+          data-js="bookmark-icon-filled"
+        />
       </button>
     </section>
 
@@ -77,8 +88,19 @@
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
         javaScript
       </p>
-      <button class="fa-bookmark">
-        <i class="fa-regular fa-bookmark"></i>
+      <button class="bookmark" data-js="bookmark-button">
+        <img
+          src="./icons/bookmark-regular.svg"
+          alt="unfilled bookmark"
+          class=""
+          data-js="bookmark-icon"
+        />
+        <img
+          src="./icons/bookmark-solid.svg"
+          alt="filled bookmark"
+          class="hidden"
+          data-js="bookmark-icon-filled"
+        />
       </button>
     </section>
 
