Add character counter to first input

--- a/form.html
+++ b/form.html
@@ -20,11 +20,17 @@
 
     <form class="form">
       <label for="newCard">New Question:<br /></label>
-      <textarea class="newQuestion" name="newCard" id="newCard" data-js="newCard"></textarea>
+      <textarea class="newQuestion" name="newCard" id="newCard" data-js="newCard" maxlength="150"></textarea>
       <br />
+      <small class="form__character-count">(Characters left: <span data-js="counter_question"></span>)</small>
+      <br/>
+
       <label for="newAnswer">New Answer:<br /></label>
-      <textarea class="newAnswer" name="newAnswer" id="newAnswer" data-js="newAnswer"></textarea>
+      <textarea class="newAnswer" name="newAnswer" id="newAnswer" data-js="newAnswer" maxlength="150"></textarea>
       <br />
+      <small class="form__character-count">(Characters left:<span data-js="counter_answer"></span>)</small>
+      <br />
+
       <label for="newTag">New Tag:<br /></label>
       <input type="text" name="newTag" id="newTag" data-js="tags"></input>
       <br />
