--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="header">Quiz App</h1>
     </header>
 
-    <section class="quizcard">
+    <section class="quizcard" data-js="quizcard">
       <p class="quizcard__question">Question 1</p>
       <button class="quizcard__answerButton" data-js="quizcard-answer-button">
         Show Answer
@@ -30,8 +30,19 @@
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
         CSS Grid
       </p>
-      <button class="quizcard__bookmarkUnfilled">
-        <i class="fa-regular fa-bookmark quizcard__bookmarkUnfilled"></i>
+      <button class="bookmark" data-js="bookmark-button">
+        <img
+          src="./icons/bookmark-regular.svg"
+          alt="unfilled bookmark"
+          class=""
+          data-js="bookmark-icon"
+        />
+        <img
+          src="./icons/bookmark-solid.svg"
+          alt="filled bookmark"
+          class="hidden"
+          data-js="bookmark-icon-filled"
+        />
       </button>
     </section>
 
@@ -48,8 +59,19 @@
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
         flex direction
       </p>
-      <button class="quizcard__bookmarkUnfilled">
-        <i class="fa-regular fa-bookmark quizcard__bookmarkUnfilled"></i>
+      <button class="bookmark" data-js="bookmark-button">
+        <img
+          src="./icons/bookmark-regular.svg"
+          alt="unfilled bookmark"
+          class=""
+          data-js="bookmark-icon"
+        />
+        <img
+          src="./icons/bookmark-solid.svg"
+          alt="filled bookmark"
+          class="hidden"
+          data-js="bookmark-icon-filled"
+        />
       </button>
     </section>
 
@@ -66,8 +88,19 @@
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
         javaScript
       </p>
-      <button class="quizcard__bookmarkUnfilled">
-        <i class="fa-regular fa-bookmark quizcard__bookmarkUnfilled"></i>
+      <button class="bookmark" data-js="bookmark-button">
+        <img
+          src="./icons/bookmark-regular.svg"
+          alt="unfilled bookmark"
+          class=""
+          data-js="bookmark-icon"
+        />
+        <img
+          src="./icons/bookmark-solid.svg"
+          alt="filled bookmark"
+          class="hidden"
+          data-js="bookmark-icon-filled"
+        />
       </button>
     </section>
 
