I am confused and dont know which changes are in here now

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         Show Answer
       </button>
       <ul class="quizcard__tags">
-        <li class="quizcard__tag-item"><button>#html</button></li>
-        <li class="quizcard__tag-item"><button>#flexbox</button></li>
-        <li class="quizcard__tag-item"><button>#css</button></li>
+        <li><button class="quizcard__tag-item">#html</button></li>
+        <li><button class="quizcard__tag-item">#flexbox</button></li>
+        <li><button class="quizcard__tag-item">#css</button></li>
       </ul>
-      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+      <p
+        class="quizcard__answer quizcard__answer-hide"
+        data-js="quizcard-answer"
+      >
         CSS Grid
       </p>
       <button class="quizcard__bookmarkUnfilled">
@@ -41,11 +44,14 @@
         Show Answer
       </button>
       <ul class="quizcard__tags">
-        <li class="quizcard__tag-item"><button>#html</button></li>
-        <li class="quizcard__tag-item"><button>#flexbox</button></li>
-        <li class="quizcard__tag-item"><button>#css</button></li>
+        <li><button class="quizcard__tag-item">#html</button></li>
+        <li><button class="quizcard__tag-item">#flexbox</button></li>
+        <li><button class="quizcard__tag-item">#css</button></li>
       </ul>
-      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+      <p
+        class="quizcard__answer quizcard__answer-hide"
+        data-js="quizcard-answer"
+      >
         flex direction
       </p>
       <button class="quizcard__bookmarkUnfilled">
@@ -59,11 +65,14 @@
         Show Answer
       </button>
       <ul class="quizcard__tags">
-        <li class="quizcard__tag-item"><button>#html</button></li>
-        <li class="quizcard__tag-item"><button>#flexbox</button></li>
-        <li class="quizcard__tag-item"><button>#css</button></li>
+        <li><button class="quizcard__tag-item">#html</button></li>
+        <li><button class="quizcard__tag-item">#flexbox</button></li>
+        <li><button class="quizcard__tag-item">#css</button></li>
       </ul>
-      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+      <p
+        class="quizcard__answer quizcard__answer-hide"
+        data-js="quizcard-answer"
+      >
         javaScript
       </p>
       <button class="quizcard__bookmarkUnfilled">
