Change character count in Form.js

--- a/form.html
+++ b/form.html
@@ -22,13 +22,13 @@
       <label for="newCard">New Question:<br /></label>
       <textarea class="newQuestion" name="newCard" id="newCard" data-js="newCard" maxlength="150"></textarea>
       <br />
-      <small class="form__character-count">(Characters left: <span data-js="counter_question"></span>)</small>
+      <small class="form__character-count">(Characters left: <span data-js="counter_question">150</span>)</small>
       <br/>
 
       <label for="newAnswer">New Answer:<br /></label>
       <textarea class="newAnswer" name="newAnswer" id="newAnswer" data-js="newAnswer" maxlength="150"></textarea>
       <br />
-      <small class="form__character-count">(Characters left: <span data-js="counter_answer"></span>)</small>
+      <small class="form__character-count">(Characters left: <span data-js="counter_answer">150</span>)</small>
       <br />
 
       <label for="newTag">New Tag:<br /></label>
