--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         Show Answer
       </button>
       <ul class="quizcard__tags">
-        <li class="quizcard__tag-item"><button>#html</button></li>
-        <li class="quizcard__tag-item"><button>#flexbox</button></li>
-        <li class="quizcard__tag-item"><button>#css</button></li>
+        <li><button class="quizcard__tag-item">#html</button></li>
+        <li><button class="quizcard__tag-item">#flexbox</button></li>
+        <li><button class="quizcard__tag-item">#css</button></li>
       </ul>
-      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+      <p
+        class="quizcard__answer quizcard__answer-hide"
+        data-js="quizcard-answer"
+      >
         CSS Grid
       </p>
       <button class="bookmark" data-js="bookmark-button">
@@ -52,11 +55,14 @@
         Show Answer
       </button>
       <ul class="quizcard__tags">
-        <li class="quizcard__tag-item"><button>#html</button></li>
-        <li class="quizcard__tag-item"><button>#flexbox</button></li>
-        <li class="quizcard__tag-item"><button>#css</button></li>
+        <li><button class="quizcard__tag-item">#html</button></li>
+        <li><button class="quizcard__tag-item">#flexbox</button></li>
+        <li><button class="quizcard__tag-item">#css</button></li>
       </ul>
-      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+      <p
+        class="quizcard__answer quizcard__answer-hide"
+        data-js="quizcard-answer"
+      >
         flex direction
       </p>
       <button class="bookmark" data-js="bookmark-button">
@@ -81,11 +87,14 @@
         Show Answer
       </button>
       <ul class="quizcard__tags">
-        <li class="quizcard__tag-item"><button>#html</button></li>
-        <li class="quizcard__tag-item"><button>#flexbox</button></li>
-        <li class="quizcard__tag-item"><button>#css</button></li>
+        <li><button class="quizcard__tag-item">#html</button></li>
+        <li><button class="quizcard__tag-item">#flexbox</button></li>
+        <li><button class="quizcard__tag-item">#css</button></li>
       </ul>
-      <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
+      <p
+        class="quizcard__answer quizcard__answer-hide"
+        data-js="quizcard-answer"
+      >
         javaScript
       </p>
       <button class="bookmark" data-js="bookmark-button">
@@ -122,6 +131,13 @@
             alt="bookmark icon"
             class="navigation__BookmarkSite"
         /></a>
+        <a href="form.html"
+          ><img
+            src="./icons/plus-solid.svg"
+            alt="new card form"
+            class="navigation__newCardSite"
+          />
+        </a>
         <a href="profile.html"
           ><img
             src="./icons/user-regular.svg"
