Make answerbuttons all work

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </header>
 
     <section class="quizcard" data-js="quizcard">
-      <p class="quizcard__question">Question 1</p>
+      <p class="quizcard__question">
+        What is the two-dimensional grid-based layout system in CSS called?
+      </p>
       <button class="quizcard__answerButton" data-js="quizcard-answer-button">
         Show Answer
       </button>
@@ -47,7 +49,7 @@
     </section>
 
     <section class="quizcard">
-      <p class="quizcard__question">Question 2</p>
+      <p class="quizcard__question">Which flex-directions are there in CSS?</p>
       <button class="quizcard__answerButton" data-js="quizcard-answer-button">
         Show Answer
       </button>
@@ -57,7 +59,7 @@
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
-        flex direction
+        row, column and more
       </p>
       <button class="bookmark" data-js="bookmark-button">
         <img
@@ -76,7 +78,7 @@
     </section>
 
     <section class="quizcard">
-      <p class="quizcard__question">Question 3</p>
+      <p class="quizcard__question">Which values can a boolean have?</p>
       <button class="quizcard__answerButton" data-js="quizcard-answer-button">
         Show Answer
       </button>
@@ -86,7 +88,7 @@
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
       <p class="quizcard__answer-open revealAnswer" data-js="quizcard-answer">
-        javaScript
+        true or false
       </p>
       <button class="bookmark" data-js="bookmark-button">
         <img
